# AECD.Feedzai-Benchmarking-optimizers-and-learning-rate-schedulers

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
experiments/: README.md
notebooks/: 01_data_exploration.ipynb  01a_data_columns.ipynb  02_data_preparation.ipynb  03_baf_baseline.ipynb  README.md
results/: README.md
src/: README.md  io_ops.py  paths.py  utils.py
src/data/: datasets.py
src/models/: ffn.py
src/optim/: factory.py
src/training/: engine.py  metrics.py
src/viz/: plots.py
tools/: annotate_notebook.py
